@@ -339,6 +339,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="autoButton">
+            <property name="text">
+             <string>Auto</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="darkButton">
             <property name="text">
              <string>Rec Dark</string>
@@ -472,7 +479,7 @@
      <x>0</x>
      <y>0</y>
      <width>780</width>
-     <height>27</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
