@@ -1,3 +1,7 @@
+2017-02-23 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: add autointegrate button
+ * piccolo2/player/player.ui: ditto
+
 2017-02-22 Mangus Hagdorn
  * piccolo2/player/PlayerApp.py: listen for messages to update integration time
    display
